small spelling mistakes

--- a/computerGraphics/computerGraphics.html
+++ b/computerGraphics/computerGraphics.html
@@ -37,7 +37,7 @@
             <a href="../waterColor/waterColor.html" class="nav-link">Water Color</a>
             <a href="../animation/animation.html" class="nav-link">Animation</a>
             <a href="computerGraphics.html" class="nav-link">Computer Graphic</a>
-            <a href="../Minuter/minuter.html" class="nav-link">Minuter</a>
+            <a href="../Minuter/minuter.html" class="nav-link">Miniature</a>
             <a href="../pencil&charcoal/Pencil&Charcoal.html" class="nav-link">Pencil & Charcoal</a>
             <a href="../mixMedia/mixMedia.html" class="nav-link">Mix Media</a>
           </div>
