--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="./waterColor/waterColor.html" class="nav-link">Water Color</a>
             <a href="./animation/animation.html" class="nav-link">Animation</a>
             <a href="./computerGraphics/computerGraphics.html" class="nav-link">Computer Graphic</a>
-            <a href="./Minuter/minuter.html" class="nav-link">Minuter</a>
+            <a href="./Miniature Art/minuter.html" class="nav-link">Miniature</a>
             <a href="./pencil&charcoal/Pencil&Charcoal.html" class="nav-link">Pencil & Charcoal</a>
             <a href="./mixMedia/mixMedia.html" class="nav-link">Mix Media</a>
           </div>
@@ -115,7 +115,7 @@
         <img src="images/img4.jpg" alt="LandScape">
           <div class="details">
             <div class="content">
-              <h2>Minuter</h2>
+              <h2>Miniature Art</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eveniet modi culpa </p>
                  <a href="./Minuter/minuter.html" class="btn">Read More</a>
             </div>  
