exhibition page changes

--- a/exhibition.html
+++ b/exhibition.html
@@ -13,7 +13,7 @@
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
-    <script src="./js/picSlider.js"></script>
+    <script src="./js/exhibitionSlider.js"></script>
 </head>
 <body>
 <!-- Menu start from here -->
@@ -137,6 +137,7 @@
   </div>
 </footer>
 
+<!-- hamburger-menu script is here-->
 <script src="/js/script.js"></script>
 <script>
 $(window).load(function() {
