exhibition slider starting

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <div class="box">
       <div class="imgBox">
-        <img src="images/img4.jpg" alt="LandScape">
+        <img src="images/img4.jpg" alt="Animation clip">
           <div class="details">
             <div class="content">
               <h2>Animation Video's</h2>
@@ -99,7 +99,7 @@
     
     <div class="box">
       <div class="imgBox">
-        <img src="images/img3.jpg" alt="LandScape">
+        <img src="images/img3.jpg" alt="Computer Graphic">
           <div class="details">
             <div class="content">
               <h2>Computer Graphic and Art</h2>
@@ -112,7 +112,7 @@
 
     <div class="box">
       <div class="imgBox">
-        <img src="images/img4.jpg" alt="LandScape">
+        <img src="images/img4.jpg" alt="Minuture">
           <div class="details">
             <div class="content">
               <h2>Miniature Art</h2>
@@ -125,7 +125,7 @@
 
     <div class="box">
       <div class="imgBox">
-        <img src="images/img6.jpg" alt="LandScape">
+        <img src="images/img6.jpg" alt="Pencil portrait">
           <div class="details">
             <div class="content">
               <h2>Pencil and Charcoal</h2>
@@ -138,7 +138,7 @@
 
     <div class="box">
       <div class="imgBox">
-        <img src="images/img5.jpg" alt="LandScape">
+        <img src="images/img5.jpg" alt="MixMedia calligraphy">
           <div class="details">
             <div class="content">
               <h2>Mix Media</h2>
