--- a/index.html
+++ b/index.html
@@ -32,12 +32,26 @@
         <li class="nav-item">
           <a class="nav-link" id="drop-itDown">Gallery</a>
           <div class="dropdown-content" id="dropdown-item">
-            <a href="./waterColor/waterColor.html" class="nav-link">Water Color</a>
-            <a href="./animation/animation.html" class="nav-link">Animation</a>
-            <a href="./computerGraphics/computerGraphics.html" class="nav-link">Computer Graphic</a>
-            <a href="./Miniature Art/minuter.html" class="nav-link">Miniature</a>
-            <a href="./pencil&charcoal/Pencil&Charcoal.html" class="nav-link">Pencil & Charcoal</a>
-            <a href="./mixMedia/mixMedia.html" class="nav-link">Mix Media</a>
+            <ul>
+              <li class = "nav-item">
+                   <a href="./waterColor/waterColor.html" class="nav-link">Water Color</a>
+              </li>
+              <li class = "nav-item">
+                   <a href="./animation/animation.html" class="nav-link">Animation</a>
+              </li>
+              <li class = "nav-item">
+                    <a href="./computerGraphics/computerGraphics.html" class="nav-link">Computer Graphic</a>
+              </li>
+              <li class = "nav-item">
+                   <a href="./Miniature Art/minuter.html" class="nav-link">Miniature</a>
+              </li>
+              <li class = "nav-item">
+                   <a href="./pencil&charcoal/Pencil&Charcoal.html" class="nav-link">Pencil & Charcoal</a>
+              </li>
+              <li class = "nav-item">
+                    <a href="./mixMedia/mixMedia.html" class="nav-link">Mix Media</a>
+              </li>
+              </ul>
           </div>
         </li>
 
