--- a/computerGraphics/computerGraphics.html
+++ b/computerGraphics/computerGraphics.html
@@ -74,12 +74,12 @@
         </div>
       
         <div class="img-box-shadow">
-          <a href="waterColor30.jpg" data-lightbox="mygallery"><img src="waterColor30-small.jpg" alt="landScape"></a>
+          <a href="cg25.jpg" data-lightbox="mygallery"><img src="cg25-small.jpg" alt="landScape"></a>
           <p>Will paintined</p>
         </div>
 
         <div class="img-box-shadow">
-          <a href="waterColor29.jpg" data-lightbox="mygallery"><img src="waterColor29-small.jpg" alt="landScape"></a>
+          <a href="cg24.jpg" data-lightbox="mygallery"><img src="cg24-small.jpg" alt="landScape"></a>
           <p>Will paintined</p>
         </div>
 
