udpate new cg pics

--- a/computerGraphics/computerGraphics.html
+++ b/computerGraphics/computerGraphics.html
@@ -69,7 +69,7 @@
         </div>
         
         <div class="img-box-shadow">
-          <a href="waterColor31.jpg" data-lightbox="mygallery"><img src="waterColor31-small.jpg" alt="landScape"></a>
+          <a href="cg26.jpg" data-lightbox="mygallery"><img src="cg26-small.jpg" alt="landScape"></a>
           <p>Will paintined</p>
         </div>
       
