--- a/computerGraphics/computerGraphics.html
+++ b/computerGraphics/computerGraphics.html
@@ -96,7 +96,11 @@
         </div>
 
         <div class="img-box-shadow">
-          <a href="cg20.jpg" data-lightbox="mygallery" data-title="Country side"><img src="cg20-small.jpg" alt="landScape"></a>
+          <a href="cg20.jpg" data-lightbox="mygallery"><img src="cg20-small.jpg" alt="landScape"></a>
+        </div>
+      
+      <div class="img-box-shadow">
+          <a href="cg19.jpg" data-lightbox="mygallery" data-title="Country side"><img src="cg19-small.jpg" alt="landScape"></a>
         </div>
     <!-- </div> -->
     </div>
