update deviantART logo

--- a/index.html
+++ b/index.html
@@ -185,11 +185,12 @@
       <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="social">
-              <a href="https://www.facebook.com/shoaibartt" target = "_blank"><i class="fab fa-facebook fa-3x"></i></a>
-              <a href="https://www.instagram.com/shoaibzaheerart/" target = "_blank"><i class="fab fa-instagram fa-3x"></i></a>
-              <a href="#" target = "_blank"><i class="fab fa-twitter fa-3x"></i></a>
-              <a href="https://www.youtube.com/channel/UCstXD_Q9VO5bgXpRZcI4rbg/featured?view_as=subscriber" target = "_blank"><i class="fab fa-youtube fa-3x"></i></a>
-              <a href="https://github.com/shoaib-zaheer" target = "_blank"><i class="fab fa-github fa-3x"></i></a>
+              <a href="https://www.facebook.com/shoaibartt" target = "_blank"><i class="fab fa-facebook fa-2x"></i></a>
+              <a href="https://www.deviantart.com/shoaib-moswer" target = "_blank"><i class="fab fa-deviantart fa-2x"></i></a>
+              <a href="https://www.instagram.com/shoaibzaheerart/" target = "_blank"><i class="fab fa-instagram fa-2x"></i></a>
+              <a href="#" target = "_blank"><i class="fab fa-twitter fa-2x"></i></a>
+              <a href="https://www.youtube.com/channel/UCstXD_Q9VO5bgXpRZcI4rbg/featured?view_as=subscriber" target = "_blank"><i class="fab fa-youtube fa-2x"></i></a>
+              <a href="https://github.com/shoaib-zaheer" target = "_blank"><i class="fab fa-github fa-2x"></i></a>
           </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
