update 3 cg pics

--- a/computerGraphics/computerGraphics.html
+++ b/computerGraphics/computerGraphics.html
@@ -67,6 +67,21 @@
           <a href="waterColor32.jpg" data-lightbox="mygallery"><img src="waterColor32-small.jpg" alt="landScape"></a>
           <p>Will paintined</p>
         </div>
+
+        <div class="img-box-shadow">
+          <a href="cg29.jpg" data-lightbox="mygallery"><img src="cg29-small.jpg" alt="landScape"></a>
+          <p>Will paintined</p>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="cg28.jpg" data-lightbox="mygallery"><img src="cg28-small.jpg" alt="landScape"></a>
+          <p>Will paintined</p>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="cg27.jpg" data-lightbox="mygallery"><img src="cg27-small.jpg" alt="landScape"></a>
+          <p>Will paintined</p>
+        </div>
         
         <div class="img-box-shadow">
           <a href="cg26.jpg" data-lightbox="mygallery"><img src="cg26-small.jpg" alt="landScape"></a>
