updated water color page

--- a/waterColor/waterColor.html
+++ b/waterColor/waterColor.html
@@ -63,14 +63,36 @@
  <div class="gallery">
     <div class="items">
     <!-- <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"> -->
+
+
+        <div class="img-box-shadow">
+          <a href="waterColor36.jpg" data-lightbox="mygallery"><img src="waterColor36-small.jpg" alt="landScape"></a>
+          <p></p>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor35.jpg" data-lightbox="mygallery"><img src="waterColor35-small.jpg" alt="landScape"></a>
+          <p></p>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor34.jpg" data-lightbox="mygallery"><img src="waterColor34-small.jpg" alt="landScape"></a>
+          <p></p>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor33.jpg" data-lightbox="mygallery"><img src="waterColor33-small.jpg" alt="landScape"></a>
+          <p></p>
+        </div>
+
         <div class="img-box-shadow">
           <a href="waterColor32.jpg" data-lightbox="mygallery"><img src="waterColor32-small.jpg" alt="landScape"></a>
-          <p>Will paintined</p>
+          <p></p>
         </div>
         
         <div class="img-box-shadow">
           <a href="waterColor31.jpg" data-lightbox="mygallery"><img src="waterColor31-small.jpg" alt="landScape"></a>
-          <p>Will paintined</p>
+          <p></p>
         </div>
       
         <div class="img-box-shadow">
@@ -80,7 +102,7 @@
 
         <div class="img-box-shadow">
           <a href="waterColor29.jpg" data-lightbox="mygallery"><img src="waterColor29-small.jpg" alt="landScape"></a>
-          <p>Will paintined</p>
+          <p></p>
         </div>
 
         <div class="img-box-shadow">
