update new cg drawing

--- a/computerGraphics/computerGraphics.html
+++ b/computerGraphics/computerGraphics.html
@@ -69,6 +69,11 @@
         </div>
 
         <div class="img-box-shadow">
+          <a href="cg30.jpg" data-lightbox="mygallery"><img src="cg30-small.jpg" alt="landScape"></a>
+          <p></p>
+        </div>
+
+        <div class="img-box-shadow">
           <a href="cg29.jpg" data-lightbox="mygallery"><img src="cg29-small.jpg" alt="landScape"></a>
           <p></p>
         </div>
