update instagram page

--- a/waterColor/waterColor.html
+++ b/waterColor/waterColor.html
@@ -230,7 +230,7 @@
             <div class="social">
               <a href="https://www.facebook.com/shoaibartt" target = "_blank"><i class="fab fa-facebook fa-2x"></i></a>
               <a href="https://www.deviantart.com/shoaib-moswer" target = "_blank"><i class="fab fa-deviantart fa-2x"></i></a>
-              <a href="https://www.instagram.com/shoaibzaheerart/" target = "_blank"><i class="fab fa-instagram fa-2x"></i></a>
+              <a href="https://www.instagram.com/shoaibartt/" target = "_blank"><i class="fab fa-instagram fa-2x"></i></a>
               <a href="#" target = "_blank"><i class="fab fa-twitter fa-2x"></i></a>
               <a href="https://www.youtube.com/channel/UCstXD_Q9VO5bgXpRZcI4rbg/featured?view_as=subscriber" target = "_blank"><i class="fab fa-youtube fa-2x"></i></a>
               <a href="https://github.com/shoaib-zaheer" target = "_blank"><i class="fab fa-github fa-2x"></i></a>
