--- a/about.html
+++ b/about.html
@@ -65,13 +65,11 @@
               <div class="about-image">
                 <img src="./images/shoaib-picture.jpg" alt="Picture">
               </div>
-              <p>
-                My name is Shoaib Zaheer, date of birth is 1989, place of birth Koz Behar village, west province of Afghanistan, in 2017 I entered Belgium as a displaced person and currently living in Belgium as a displaced person. </p>
-
-              <p>I am self study & motivated artist, able to work with different art media (water color, oil color, pencil, charcoal, calligraphy, miniature, wood Mosaic) in addition with an interest in computer graphic designing, animation, illustration, 3D model, video editing and like to explore the world of computer code like HTML, CSS, Javascript.</p>
-              <p>My art is exploration and affirmation into the emotion of subjects and idea by amalgamate of colors, forms and textures, to find those sentiments in our surroundings. Ever since I was teenage, I have been fascinated by my childish immersed thoughts.</p>
-              <p>How we humans impose the environment as our mentor and walk in the shadow of that vast science and knowledge that our environment offers to us, in order to make predictions on ourselves and our destiny.</p>
-              <p>Humans are always searching for ways to bend the environment, to get new thoughts, here the interesting thing is going to happen! The environment, like a good maintor give us the link of one of his chain thoughts, and a new idea gets roots in our mind.
+              <p> My name is Shoaib Zaheer, my date of birth is 1989, and my place of birth is Koz Behar village, west province of Afghanistan. In 2017, I entered Belgium as a displaced person, and I am currently living in Belgium as a displaced person. </p>
+              <p>I am a self-taught and motivated artist, able to work with different art media (water color, oil color, pencil, charcoal, calligraphy, miniature, wood Mosaic), have an interest in computer graphic design, animation, illustration, 3D modeling, video editing, and like to explore the world of computer code like HTML, CSS, and Javascript.</p>
+              <p>My art is an exploration and affirmation of the emotions of subjects and ideas through the amalgamation of colors, forms, and textures to find those sentiments in our surroundings. Ever since I was a teenager, I have been fascinated by my childish thoughts.</p>
+              <p>How we humans impose the environment as our mentor and walk in the shadow of the vast science and knowledge that our environment offers us in order to make predictions about ourselves and our destiny.</p>
+              <p>Humans are always searching for ways to bend the environment to get new ideas. Here is where the interesting thing is going to happen! The environment, like a good maintainer, gives us the link to one of his chains of thoughts, and a new idea gets roots in our mind.
               </p>
                   
                 </div>
